add comment to new function

--- a/documentation/components/AngularLandingComponent.html
+++ b/documentation/components/AngularLandingComponent.html
@@ -210,21 +210,21 @@
       link: &#x27;/angular-landing/form-components&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Form Components&#x27;,
+      text: &#x27;angular.nav_bar.form_components&#x27;,
       title: &#x27;Componentes de formularios&#x27;
     },
     {
       link: &#x27;/angular-landing/form&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Formulario&#x27;,
+      text: &#x27;angular.nav_bar.form&#x27;,
       title: &#x27;Formulario&#x27;
     },
     {
       link: &#x27;/angular-landing/others&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Otros&#x27;,
+      text: &#x27;angular.nav_bar.others&#x27;,
       title: &#x27;Otros&#x27;
     }
   ]</code>
@@ -284,21 +284,21 @@ export class AngularLandingComponent {
       link: &#x27;/angular-landing/form-components&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Form Components&#x27;,
+      text: &#x27;angular.nav_bar.form_components&#x27;,
       title: &#x27;Componentes de formularios&#x27;
     },
     {
       link: &#x27;/angular-landing/form&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Formulario&#x27;,
+      text: &#x27;angular.nav_bar.form&#x27;,
       title: &#x27;Formulario&#x27;
     },
     {
       link: &#x27;/angular-landing/others&#x27;,
       class: &#x27;nav-enlace&#x27;,
       activateClass: &#x27;activated-tab&#x27;,
-      text: &#x27;Otros&#x27;,
+      text: &#x27;angular.nav_bar.others&#x27;,
       title: &#x27;Otros&#x27;
     }
   ];
